--- a/05-samples.Rmd
+++ b/05-samples.Rmd
@@ -124,7 +124,10 @@ many_samples <- get_M_samples(pop.data = pop_data,
                               n = 10,
                               number.of.samples = 50000)
 ```
-```{r, echo=FALSE}
+```{r, eval = FALSE, echo = FALSE}
+saveRDS(many_samples, file = "ch_samples/many_samples_n10.RDS")
+```
+```{r, eval=TRUE}
 many_samples <- readRDS("ch_samples/many_samples_n10.RDS")
 ```
 
@@ -135,7 +138,7 @@ head(many_samples, 10)
 ```
 
 
-Each row of many_samples represents a sample of 10 people. Each column of many_samples indicates a sample statistic. You can see that for each sample/row we indicate "n" (the sample size) and "sample.mean" (the mean of the population), and a few other statistics. Even though all the samples came from the same population you can see how the values in the sample.mean column vary across samples/rows. 
+Each row of many_samples represents a sample of 10 people. Each column of many_samples indicates a sample statistic. You can see that for each sample/row we indicate "n" (the sample size) and "sample_mean" (the mean of the population), and a few other statistics. Even though all the samples came from the same population you can see how the values in the sample_mean column vary across samples/rows. 
 
 
 ```{r, eval = FALSE, echo=FALSE}
@@ -149,7 +152,7 @@ pg <- ggplot(data = pop_data,
 
 
 sdg <- ggplot(data = many_samples,
-       mapping = aes(x = sample.mean)) +
+       mapping = aes(x = sample_mean)) +
   geom_density(adjust = 1.3) +
   coord_cartesian(xlim = c(140, 205)) +
   labs(x = "Mean Height for each sample", y = "Probability") +
@@ -167,13 +170,13 @@ knitr::include_graphics("ch_samples/images/sampling_dist.png")
 ```
  
  
-Above, in Figure \@ref(fig:bothdist), we present a graph comparing the distribution of peoples heights (i.e., the population) to the distribution of sample means based on those heights (i.e., the sampling distribution). The sample means plotted are the 50000 sample means, from the sample.mean column. Recall the population mean for heights is $\mu = 172.48$ cm. Notice that most of the sample means cluster around this value. Also notice that there is considerable variability about this value. Any given sample mean ($\bar{x}$) may differ substantially from the population mean ($\mu = 172.48$). This variability illustrates the challenges with learning something from a single study - particularly a study with a small sample size. Many of the sample means fall quite far from the population mean.
+Above, in Figure \@ref(fig:bothdist), we present a graph comparing the distribution of peoples heights (i.e., the population) to the distribution of sample means based on those heights (i.e., the sampling distribution). The sample means plotted are the 50000 sample means, from the sample_mean column. Recall the population mean for heights is $\mu = 172.48$ cm. Notice that most of the sample means cluster around this value. Also notice that there is considerable variability about this value. Any given sample mean ($\bar{x}$) may differ substantially from the population mean ($\mu = 172.48$). This variability illustrates the challenges with learning something from a single study - particularly a study with a small sample size. Many of the sample means fall quite far from the population mean.
 
 Statisticians, recognizing the limitations of a single study, are not particularly concerned if a single sample mean deviates from the population mean. That said, statisticians are very concerned as to whether or not the results of a large number of studies are correct -- on average. That is, does the average of many sample means correspond to the population mean? If, on average, the sample mean does corresponds to the population mean, it is accurate and we refer to it as an unbiased estimator. Visually, this appears to be the case. But in the code below we confirm it numerically.
 
 ```{r}
 many_samples %>%
-  summarise(mean_of_sample.mean = mean(sample.mean)) %>%
+  summarise(mean_of_sample_mean = mean(sample_mean)) %>%
   as.data.frame()
 ```
 
@@ -205,15 +208,15 @@ s^2 = \frac{\sum{(x - \bar{x})^2}}{n}
 \end{aligned} 
 $$
 
-The formula for sample variance with an $n$ in the denominator is, unfortunately, a biased estimator of population variance. That is, estimates of the population variance are systematically too low when you use a sample variance formula with an $n$ in the denominator. We can see that this is true by examining the many_samples data. In these data, the column sample.var.n contains the variance for the sample calculated with the above formula. Below we use code to obtain the average of the sample.var.n column over the 50000 samples. If this average equals the population variance of 157.5 then variance, using $n$ in the denominator, is an unbiased estimator of the population variance.
+The formula for sample variance with an $n$ in the denominator is, unfortunately, a biased estimator of population variance. That is, estimates of the population variance are systematically too low when you use a sample variance formula with an $n$ in the denominator. We can see that this is true by examining the many_samples data. In these data, the column sample_var_n contains the variance for the sample calculated with the above formula. Below we use code to obtain the average of the sample_var_n column over the 50000 samples. If this average equals the population variance of 157.5 then variance, using $n$ in the denominator, is an unbiased estimator of the population variance.
 
 ```{r}
 many_samples %>%
-  summarise(mean_of_var.n = mean(sample.var.n)) %>%
+  summarise(mean_of_var_n = mean(sample_var_n)) %>%
   as.data.frame()
 ```
 
-You can see the average of sample.var.n column (141.54) is much smaller than the population variance (157.5). That is, the average of the sample variances, using $n$ in the denominator, was smaller than the population variance. Consequently, sample variance (using $n$ in the denominator) provides a biased estimate of the population variance. If we try to estimate the population variance with sample variance (using $n$ in the denominator) we will, on average, be wrong.
+You can see the average of sample_var_n column (141.54) is much smaller than the population variance (157.5). That is, the average of the sample variances, using $n$ in the denominator, was smaller than the population variance. Consequently, sample variance (using $n$ in the denominator) provides a biased estimate of the population variance. If we try to estimate the population variance with sample variance (using $n$ in the denominator) we will, on average, be wrong.
 
 Fortunately, there is a sample-level formula that estimates the population variance without bias (see Hayes). An unbiased estimate of the population variance can be obtained if we calculate the sample variance but divide by $n - 1$ instead of $n$. The unbiased estimate is calculated using Formula \@ref(eq:samplevarn1ch5).
 
@@ -222,11 +225,11 @@ s^2 = \frac{\sum{(x - \bar{x})^2}}{n-1}
       (\#eq:samplevarn1ch5)
 \end{equation} 
 
-In the many_samples data, the column sample.var.n_1 was generated using Formula \@ref(eq:samplevarn1ch5). We can evaluate the quality of Formula \@ref(eq:samplevarn1ch5), using $n-1$, by averaging the values in the sample.var.n_1 column.
+In the many_samples data, the column sample_var_n_1 was generated using Formula \@ref(eq:samplevarn1ch5). We can evaluate the quality of Formula \@ref(eq:samplevarn1ch5), using $n-1$, by averaging the values in the sample_var_n_1 column.
 
 ```{r}
 many_samples %>%
-  summarise(mean_of_var.n_1 = mean(sample.var.n_1)) %>%
+  summarise(mean_of_var_n_1 = mean(sample_var_n_1)) %>%
   as.data.frame()
 ```
 
@@ -524,6 +527,9 @@ many_samples<-  get_d_samples_from_population_data(pop1 = male_heights,
                                    cell.n = 10,
                                    number.of.samples = 50000)
 ```
+```{r, eval = FALSE, echo = FALSE}
+saveRDS(many_samples, file = "ch_samples/many_samples_d_n10.RDS")
+```
 
 ```{r, echo=FALSE}
 many_samples <- readRDS("ch_samples/many_samples_d_n10.RDS")
@@ -540,7 +546,7 @@ Recall the population-level standardized mean difference, $\delta$, was 1.49. We
 ```{r}
 many_samples %>%
   summarise(mean_d = mean(d),
-            mean_d_unbiased = mean(d.unbiased))
+            mean_d_unbiased = mean(d_unbiased))
 ```
 
 You can see that the mean of the sample-level $d$ values is 1.56 which is higher than the population-level standardized mean difference ($\delta$ = 1.49). In contrast, you can see that the mean of the sample-level $d_{unbiased}$ values is 1.49 which corresponds to the population-level standardized mean difference ($\delta$ = 1.49).
@@ -551,26 +557,6 @@ You can see that the mean of the sample-level $d$ values is 1.56 which is higher
 An inspection of the first few rows of the many_samples data, above, illustrates that many of the $d_{unbiased}$ values differed from the population-level standardized mean difference of $\delta = 1.49$. We can see the variability in sample-level $d_{unbiased}$ values in the histogram below.
 
 
-```{r, out.height="80%", echo = F}
-
-
-d_dist <- ggplot(data = many_samples,
-       mapping = aes(x = d.unbiased)) +
-  geom_histogram(position = "identity",
-                 boundary = 0,
-                 binwidth = .25,
-                 fill = "black",
-                 color =  "black",
-                 alpha = .50) +
-  theme_classic() +
-  scale_x_continuous(breaks = seq(-1, 4, by = .5)) +
-  coord_cartesian(xlim = c(-1,4)) +
-  geom_vline(xintercept = 1.49, size = 2) +
-  labs(x = "Unbiased sample d-value", y = "Count") +
-
-ggsave(filename = "ch_samples/images/d_dist.png", dpi = 300, width = 8, height = 6)
-```
-
 ```{r ddist, echo=FALSE, out.width="95%", fig.cap="Histogram of $d_{unbiased}$ when $\\delta = 1.49$"}
 knitr::include_graphics("ch_samples/images/d_dist.png")
 ```
@@ -579,8 +565,8 @@ We can calculate the full range of sample-level $d_{unbiased}$ values with the c
 
 ```{r}
 many_samples %>%
-  summarise(d_min = min(d.unbiased),
-            d_max = max(d.unbiased))
+  summarise(d_min = min(d_unbiased),
+            d_max = max(d_unbiased))
 ```
 
 We see from the output that $d_{unbiased}$ values were as small as -0.38 and as large as 5.15. All of these values are estimates of the population-level standardized mean difference of $\delta = 1.49$. You can see that many of the sample-level estimates differed considerably from the population-level value. The negative $d$-value (i.e., the minimum) is a case where the study (i.e, sample-level result) would have found that women are taller than men - a reversal of what is actually true at the population-level. This range of results illustrates the extent to which the findings for a single sample/study may deviate from the underlying truth for the entire population. 
